Some Controller and DAO were modified, views & servlet added

--- a/web/index.html
+++ b/web/index.html
@@ -6,11 +6,22 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>Login</title>
     </head>
     <body>
-        <div>TODO write content</div>
+        <form action="validationServlet">
+            <div>
+                <label>Email</label>
+                <input type="text" name="txtEmail" value="" />
+            </div>
+            <div>
+                <label>Password</label>
+                <input type="password" name="txtPassword" value="" />
+            </div>
+            <div class="text-center">
+                <input type="submit" name="btnLogin" value="Login">
+            </div>
+        </form>
     </body>
 </html>
