Some Controller and DAO were modified, views & servlet added

--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,13 @@ and open the template in the editor.
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Login</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--Style Bootstrap-->
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+
+        <!--Style Custom-->
+        <!--<link rel="stylesheet" href="bootstrap/css/custom.css">-->
+        <link rel="stylesheet" href="bootstrap/css/dashboard.css">
     </head>
     <body>
         <form action="validationServlet">
@@ -23,5 +30,11 @@ and open the template in the editor.
                 <input type="submit" name="btnLogin" value="Login">
             </div>
         </form>
+        <!--jQuery lokal -->
+        <script src="../bootstrap/js/jquery/jquery.min.js"></script>
+        <script src="../bootstrap/js/bootstrap/js/bootstrap.min.js"></script>
+
+        <!--Custom JS--> 
+        <script src="../bootstrap/custom.js"></script>
     </body>
 </html>
